// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    />
  </div>
</div>
`;

exports[`FormField w/ any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB className"
  id="alarm"
  title="title"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    />
  </div>
</div>
`;

exports[`FormField w/ inline 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 gIfyHx"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ label any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU className"
    id="alarm"
    title="title"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    />
  </div>
</div>
`;

exports[`FormField w/ label required 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: center 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 jTbOpb"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: left 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 Qeoku"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: right 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 bnpqKd"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hQevbU"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT className"
      id="alarm"
      title="title"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: critical 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 jpFfdx"
      color="critical"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: warning 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 hSLbAO"
      color="warning"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ messages 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 gMIZCT"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    >
      Message
    </div>
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eNHlmT"
    >
      Message #2
    </div>
  </div>
</div>
`;
